--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Open Overlay</title>
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
